--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,3 @@
-
 @import "./_mixins.scss";
 @import "./_reset.scss";
 @import "./_variables.scss";
@@ -11,3 +10,4 @@
 @import "../components/Slider/Slider.scss";
 @import "../components/Filter/Filter.scss";
 @import "../components/ProductList/ProductList.scss";
+@import "../components/ProductListItem/ProductListItem.scss";
