--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -3,5 +3,8 @@
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+    @media (max-width: 768px) {
+      justify-content: center;
+    }
   }
 }
