--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,11 +2,10 @@
   @include flex(row, start, start);
   padding: 0;
   gap: 40px;
+  @media (max-width: 1450px) {
+    padding: 0 20px;
+  }
   @media (max-width: 768px) {
     flex-direction: column-reverse;
   }
 }
-
-// .container {
-//   padding: 0;
-// }
