--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -33,6 +33,7 @@
             a {
               gap: 5px;
               @include flex(row, center, center);
+              color: $grey;
               svg {
                 font-size: 25px;
                 color: $grey;
