--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,11 +1,13 @@
 .main {
-  @include flex(row, start, start);
-  padding: 0;
-  gap: 40px;
-  @media (max-width: 1450px) {
-    padding: 0 20px;
-  }
-  @media (max-width: 768px) {
-    flex-direction: column-reverse;
+  & > .content {
+    @include flex(row, start, start);
+    padding: 0;
+    gap: 40px;
+    @media (max-width: 1450px) {
+      padding: 0 20px;
+    }
+    @media (max-width: 768px) {
+      flex-direction: column-reverse;
+    }
   }
 }
