--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,3 +14,7 @@
 @import "../components/ProductListItem/ProductListItem.scss";
 @import "../components/Footer/Footer.scss";
 @import '../components/Comment/Comment.scss';
+@import '../components/Comment/Comment.scss';
+@import '../components/CommentItem/CommentItem.scss';
+@import '../components/Recommendation/Recommendation.scss';
+@import '../components/Category/Category.scss';
