--- a/src/components/NavLink/NavLink.scss
+++ b/src/components/NavLink/NavLink.scss
@@ -40,8 +40,7 @@
   }
 }
 .navlink-bottom {
-  box-shadow: 0 2px 20px 2px rgb(191, 191, 191);
-
+  border-bottom: 1px solid whitesmoke;
   &__inner {
     @include flex(row, space-between, center);
     padding: 10px 0;
