--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -1,8 +1,8 @@
 .category {
+  margin-bottom: 20px;
   & > ul {
     width: 100%;
     @include flex(row, space-between, center);
-    // background: blue;
     li {
       padding: 10px 20px;
       border-radius: 5px;
@@ -10,11 +10,16 @@
       transition: all 0.3s;
       font-weight: 600;
       font-size: 25px;
+
       &:hover {
         transition: all 0.3s;
         color: white;
         background: $red;
       }
     }
+  }
+  &-active {
+    background: $red;
+    color: white;
   }
 }
