--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 //Pages
 @import "../pages/Home/Home.scss";
 @import "../pages/ProductItem/ProductItem.scss";
+@import '../pages/Auth/Auth.scss';
 
 //Components
 @import "../components/NavLink/NavLink.scss";
