--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,7 @@
 @import "../pages/Home/Home.scss";
 @import "../pages/ProductItem/ProductItem.scss";
 @import '../pages/Auth/Auth.scss';
+@import '../pages/Favorite/Favorite.scss';
 
 //Components
 @import "../components/NavLink/NavLink.scss";
