--- a/src/pages/Auth/Auth.scss
+++ b/src/pages/Auth/Auth.scss
@@ -1,15 +1,10 @@
 .auth {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  @include flex(column, center, center);
   height: 100vh;
 }
 .formContainer {
   margin-top: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include flex(column, center, center);
   gap: 1rem;
 }
 .input {
@@ -23,11 +18,7 @@
   width: 100%;
   cursor: pointer;
 }
-.error-alert {
-  @include pos-left(5%, 50%);
-  transform: translate(-50%, -50%);
-}
-.backToMain{
+
+.backToMain {
   @include pos-left(2%, 1%);
-  
 }
