--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 @import "../pages/ProductItem/ProductItem.scss";
 @import '../pages/Auth/Auth.scss';
 @import '../pages/Favorite/Favorite.scss';
+@import '../pages/Cart/Cart.scss';
 
 //Components
 @import "../components/NavLink/NavLink.scss";
