--- a/src/components/ProductListItem/ProductListItem.scss
+++ b/src/components/ProductListItem/ProductListItem.scss
@@ -63,12 +63,19 @@
   .btns {
     display: flex;
     width: 100%;
-    background: red;
     margin-top: auto;
 
     button {
       width: 100%;
       height: 40px;
+      padding: 0 10px;
+      background: $red;
+      border: 0;
+      font-size: 16px;
+      font-weight: 600;
+      color: white;
+      box-shadow: 0 0 3px $red;
+      border-radius: 5px;
     }
   }
 
@@ -84,4 +91,14 @@
   &:hover {
     box-shadow: 0 0 10px 5px #333;
   }
+}
+.snackBarCart {
+  @include pos-right(auto, 24px !important);
+  left: auto !important;
+}
+
+.snackBarAdmin{
+  @include pos-left(24px, 50% !important);
+  bottom: auto !important; 
+  transform: translate(-50%, 0);
 }
