--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,8 @@
 @import '../pages/Auth/Auth.scss';
 @import '../pages/Favorite/Favorite.scss';
 @import '../pages/Cart/Cart.scss';
+@import '../pages/Checkout/Checkout.scss';
+@import '../pages/Admin/Admin.scss';
 
 //Components
 @import "../components/NavLink/NavLink.scss";
