--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -3,6 +3,8 @@
   & > ul {
     width: 100%;
     @include flex(row, space-between, center);
+    flex-wrap: wrap;
+
     li {
       padding: 10px 20px;
       border-radius: 5px;
@@ -16,10 +18,25 @@
         color: white;
         background: $red;
       }
+
+      @media (max-width: 850px) {
+        font-size: 20px;
+      }
     }
   }
   &-active {
     background: $red;
     color: white;
   }
+  @media (max-width: 480px) {
+    & > ul {
+      justify-content: center;
+
+      li {
+        font-size: 16px;
+        padding: 8px 12px;
+      }
+    }
+  }
+
 }
