--- a/src/components/ProductList/ProductList.scss
+++ b/src/components/ProductList/ProductList.scss
@@ -3,6 +3,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 16px;
+    justify-content: center;
     @media (max-width: 768px) {
       justify-content: center;
     }
