--- a/src/pages/Favorite/Favorite.scss
+++ b/src/pages/Favorite/Favorite.scss
@@ -2,9 +2,13 @@
   display: flex;
   flex-direction: column;
   margin-top: 20px;
+
   &__title {
     @include flex(row, space-between, center);
     width: 100%;
+
+
+
     & > button {
       font-size: 18px;
       background: 0;
@@ -13,17 +17,45 @@
       border: 0;
       @include flex(row, center, center);
       gap: 10px;
+      cursor: pointer;
+
       &:hover {
         color: $red;
+      }
+
+      svg {
+        width: 20px;
+      }
+
+      &:hover {
+        color: $red;
+
+        svg {
+          width: 24px;
+        }
+      }
+      @media (max-width: 768px) {
+        .favorite-inner__title {
+          & > button {
+            font-size: 16px;
+
+            svg {
+              width: 18px;
+            }
+          }
+        }
       }
     }
   }
 
   &__content {
+    width: 100%;
     margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    justify-content: center;
+    gap: 10px;
+
     li {
       border-radius: 5px;
       padding: 10px;
@@ -33,67 +65,147 @@
       h2 {
         text-align: center;
       }
+
       img {
-        width: 300px;
+        width: 100%;
+        max-width: 300px;
         height: 300px;
         border-radius: 5px;
+        object-fit: cover;
       }
+
       .price {
         @include flex(row, space-between, center);
         width: 100%;
+
         span {
           font-size: 20px;
           font-weight: 600;
         }
+
         &-discont {
           text-decoration: line-through;
           color: $red;
         }
       }
+
       .btns {
         width: 100%;
         @include flex(row, center, center);
+
         button {
           width: 100%;
-            padding: 10px ;
-            background: $red;
-            border: 0;
-            border-radius: 5px;
-            color: white;
-            font-size: 18px;
-            font-weight: 600;
+          padding: 10px;
+          background: $red;
+          border: 0;
+          border-radius: 5px;
+          color: white;
+          font-size: 18px;
+          font-weight: 600;
+          cursor: pointer;
         }
+
         & > svg {
           width: 50px;
           height: 50px;
           cursor: pointer;
           margin: 0 5px 0 10px;
         }
+
         a {
           @include flex(row, center, center);
           color: black;
+          cursor: pointer;
+
           svg {
             width: 35px;
-            cursor: pointer;
             height: 35px;
           }
         }
       }
+
+      @media (max-width: 700px){
+        width: 100%;
+        gap: 10px;
+        img{
+          width: 100%;
+          max-width: 100%;
+        }
+      }
     }
 
-    &_false{
-        @include flex(column, center, center);
-        padding: 100px 0;
-        gap: 20px;
-        width: 100%;
-        & > a{
-            background: $red;
-            padding: 10px 20px;
-            border-radius: 5px;
-            color: white;
-            font-weight: 600;
-            font-size: 22px;
+    &_false {
+      @include flex(column, center, center);
+      padding: 100px 0;
+      gap: 20px;
+      width: 100%;
+      text-align: center;
+      & > a {
+        background: $red;
+        padding: 10px 20px;
+        border-radius: 5px;
+        color: white;
+        font-weight: 600;
+        font-size: 22px;
+        cursor: pointer;
+      }
+      @media (max-width: 480px){
+        font-size: 15px;
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    &__title {
+      & > button {
+        font-size: 16px;
+      }
+    }
+
+    &__content {
+      justify-content: center;
+      li {
+        img {
+          object-fit: cover;
+          width: 100%;
         }
+      }
+    }
+  }
+
+  @media (max-width: 480px) {
+    &__title {
+      gap: 10px;
+      h1{
+        font-size: 24px;
+      }
+      & > button {
+        font-size: 14px;
+        svg{
+          display: none;
+        }
+      }
+    }
+
+    &__content {
+      li {
+        img {
+          max-width: 100%;
+          height: auto;
+        }
+
+        .price {
+          span {
+            font-size: 18px;
+          }
+        }
+
+        .btns {
+          button {
+            font-size: 16px;
+          }
+        }
+      }
     }
   }
 }
