--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -7,7 +7,7 @@
       padding: 0 20px;
     }
     @media (max-width: 768px) {
-      flex-direction: column-reverse;
+      flex-direction: column;
     }
   }
 }
