--- a/src/pages/ProductItem/ProductItem.scss
+++ b/src/pages/ProductItem/ProductItem.scss
@@ -1,8 +1,15 @@
 .productItem {
   margin-top: 50px;
+
   &-content {
     @include flex(row, space-between, start);
     height: 100%;
+    gap: 30px;
+    @media (max-width: 900px) {
+      flex-direction: column;
+      gap: 0;
+    }
+
     &__left {
       background: whitesmoke;
       border-radius: 20px;
@@ -11,27 +18,57 @@
       @include flex(row, center, center);
       img {
         border-radius: 20px;
-
+        object-fit: cover;
         width: 300px;
         height: 300px;
+        @media (max-width: 1411px) {
+          width: 100%;
+          height: 100%;
+        }
+        @media (max-width: 900px) {
+          width: 100%;
+          height: 400px;
+        }
+        @media (max-width: 382px) {
+          height: 300px;
+        }
+      }
+      @media (max-width: 1411px) {
+        height: 100%;
+      }
+      @media (max-width: 900px) {
+        width: 100%;
+        height: auto;
+        margin-bottom: 20px;
       }
     }
 
     &__right {
+      @media (max-width: 900px) {
+        margin-bottom: 20px;
+      }
       @include flex(column, start, start);
       gap: 30px;
       h3 {
         font-size: 32px;
+
+        @media (max-width: 768px) {
+          font-size: 28px;
+        }
       }
       .desc {
-        width: 400px;
+        width: 100%;
         span {
           font-size: 25px;
           font-weight: 600;
+
+          @media (max-width: 768px) {
+            font-size: 22px;
+          }
         }
-        p{
-            font-weight: 500;
-            color: $grey;
+        p {
+          font-weight: 500;
+          color: $grey;
         }
       }
       .price {
@@ -44,6 +81,13 @@
           color: $red;
         }
         font-size: 22px;
+
+        @media (max-width: 768px) {
+          font-size: 20px;
+        }
+        @media (max-width: 386px) {
+          flex-direction: column;
+        }
       }
 
       .share {
@@ -51,7 +95,10 @@
         span {
           font-size: 25px;
           font-weight: 600;
-          
+
+          @media (max-width: 768px) {
+            font-size: 22px;
+          }
         }
         ul {
           margin-top: 10px;
@@ -69,6 +116,11 @@
               svg {
                 width: 25px;
                 height: 25px;
+
+                @media (max-width: 768px) {
+                  width: 22px;
+                  height: 22px;
+                }
               }
             }
           }
@@ -76,7 +128,7 @@
       }
 
       .btn {
-        width: 100%;
+        width: 50%;
         margin-top: auto;
         button {
           background: $red;
@@ -86,11 +138,30 @@
           border: 0;
           color: white;
           font-size: 22px;
+
           &:hover {
             box-shadow: 0 0 2px $red;
           }
+
+          @media (max-width: 768px) {
+            font-size: 20px;
+          }
+        }
+
+        @media (max-width: 526px) {
+          width: 100%;
         }
       }
     }
+  }
+
+  &-comment {
+    @media (max-width: 900px) {
+      width: 100%;
+    }
+  }
+
+  @media (max-width: 900px) {
+    margin-top: 20px;
   }
 }
